# miniwinwm

./: .gitignore  README.md
.metadata/: version.ini
Arduino/DevKitC/: .gitignore
Atmel/ATSAM3X8E/: readme.txt
BMPConv16Colour/: .cproject  .project
BMPConv16Colour/src/: BMPConv16Colour.cpp
BMPConv24Colour/: .gitignore  makefile_linux
BMPConv32Colour/: .cproject  .project
BMPConv32Colour/src/: BMPConv32Colour.cpp
BMPConv32Colour_Linux/: .cproject  .project
BMPConv32Colour_Windows/: .cproject  .project
BMPConvBack16Colour/: .cproject  .project
BMPConvBack16Colour/src/: BMPConvBack16Colour.cpp
BMPConvMono/: .cproject  .project  main.cpp  makefile_windows
BMPConvMono/src/: BMPConvMono.cpp
BMPConvMono_Linux/: .cproject  .project  makefile
BMPConvMono_Windows/: .cproject  .project
CodeGen/: example_empty.json  example_everything.json  example_minimised.json  example_window_scroll_bars.json  example_window_scroll_bars_large.json  main.cpp  makefile_windows
CodeGen_Linux/: .gitignore  example.json  main.cpp  makefile
ESP32-IDF/MiniWinFixedWindows/DevKitC/components/MiniWinFixedWindows/: CMakeLists.txt
ESP32-IDF/MiniWinSimple/DevKitC/components/MiniWinSimple/: CMakeLists.txt
ESP32-IDF/MiniWinTTFonts/DevKitC/components/MiniWinTTFonts/: CMakeLists.txt
ESP32-IDF/MiniWinTest/DevKitC/components/MiniWinTest/: CMakeLists.txt
Espressif/DevKitC/MiniWinCamera/components/MiniWinCamera/: CMakeLists.txt
Espressif/DevKitC/MiniWinFile/components/MiniWinFile/: CMakeLists.txt
Espressif/DevKitC/MiniWinFreeRTOS/components/MiniWinFreeRTOS/: CMakeLists.txt
Espressif/DevKitC/MiniWinRoot/components/MiniWinRoot/: CMakeLists.txt
Espressif/DevKitC/MiniWinTest/main/: CMakeLists.txt
FontEncoder/: makefile_linux
FontEncoder_Linux/: .cproject  .project  Makefile
MCUXpresso/: .gitignore
MCUXpresso/.mcuxpressoide_packages_support/: crt_directory.xml  info.properties
Microchip/ATSAM3X8E/: readme.txt
MiniWin/: Doxyfile  calibrate.c  calibrate.h  miniwin.c  miniwin.c.bak  miniwin.h  miniwin_debug.c  miniwin_debug.h  miniwin_message_queue.c  miniwin_message_queue.h  miniwin_settings.c  miniwin_settings.h  miniwin_touch.c  miniwin_touch.h  miniwin_tree_container.c  miniwin_tree_container.h  miniwin_utilities.c  miniwin_utilities.h
MiniWin/bitmaps/: MiniWin.doc  backspace_key.c  cancel_key.c  close_icon.c  close_icon_large.c  file_icon_large.c  file_icon_small.c  folder_close_icon_large.c  folder_close_icon_small.c  folder_icon_large.c  folder_icon_small.c  folder_open_icon_large.c  folder_open_icon_small.c  let_key.c  maximise_icon.c  maximise_icon_large.c  minimise_icon.c  minimise_icon_large.c  mw_bitmaps.h  num_key.c  ok_key.c  resize_icon.c  resize_icon_large.c  shift_key.c  sym_key.c  tick.c  tick_large.c
MiniWin/dialogs/: dialog_colour_chooser.c  dialog_colour_chooser.h  dialog_common.h  dialog_date_chooser.c  dialog_date_chooser.h  dialog_file_chooser.c  dialog_file_chooser.h  dialog_number_entry.c  dialog_number_entry.h  dialog_one_button.c  dialog_one_button.h  dialog_text_entry.c  dialog_text_entry.h  dialog_time_chooser.c  dialog_time_chooser.h  dialog_two_button.c  dialog_two_button.h
MiniWin/docs/: MiniWin.doc  MiniWin.docx  PIC32MX470 Curisoity readme.txt  Project test.xls  ~$iniWin.doc  ~WRL0002.tmp  ~WRL0004.tmp  ~WRL0097.tmp  ~WRL0385.tmp  ~WRL0424.tmp  ~WRL0743.tmp  ~WRL0786.tmp  ~WRL1521.tmp  ~WRL1535.tmp  ~WRL2927.tmp  ~WRL3066.tmp  ~WRL3576.tmp  ~WRL3886.tmp  ~WRL3947.tmp  ~WRL3999.tmp
MiniWin/gl/: ascii_5x9.c  gl.c  gl.h  gl_fonts.c  iso8859_15_5x9.c
MiniWin/hal/: hal_delay.h  hal_init.c  hal_init.d  hal_init.h  hal_lcd.h  hal_non_vol.h  hal_timer.h  hal_touch.h
MiniWin/templates/: app.c_template  app.c_template_general  app.c_template_windows  miniwin_config.h_template  miniwin_user.c_template
MiniWin/ui/: ui_arrow.c  ui_arrow.h  ui_button.c  ui_button.h  ui_label.c  (+29 more)
MiniWinCamera_Common/: .gitignore  camlib.h  main.c  main.h  miniwin_config.h  miniwin_user.c  miniwin_user.h  window_camera.c  window_camera.h
MiniWinFile_Common/: main.c  miniwin_config.h  miniwin_user.c  miniwin_user.h  window_file.c  window_file.h  window_file_tree.c  window_file_tree.h  window_image.c  window_image.h  window_selection.c  window_selection.h  window_text.c  window_text.h
MiniWinFixedWindows_Common/: date_bitmap.c  date_down_bitmap.c  file_bitmap.c  file_down_bitmap.c  help_bitmap.c  help_down_bitmap.c  miniwin_config.h  miniwin_user.c  miniwin_user.h  minwin_user.c  settings_bitmap.c  settings_down_bitmap.c  temp_bitmap.c  temp_down_bitmap.c  time_bitmap.c  time_down_bitmap.c  window_date_icon.c  window_date_icon.h  window_file.c  window_file.h  window_file_icon.c  window_file_icon.h  window_help_icon.c  window_help_icon.h  window_settings.c  window_settings.h  window_settings_icon.c  window_settings_icon.h  window_temp.c  window_temp.h  window_temp_icon.c  window_temp_icon.h  window_time_icon.c  window_time_icon.h
MiniWinFreeRTOS_Common/: gyro_util.c  gyro_util.h  main.c  main.h  miniwin_config.h  miniwin_user.c  miniwin_user.h  window_gyro_x.c  window_gyro_x.h  window_gyro_y.c  window_gyro_y.h  window_gyro_z.c  window_gyro_z.h
MiniWinRoot_Common/: W1.c  W1.h  W2.c  W2.h  logo.c  miniwin_config.h  miniwin_user.c  miniwin_user.h
MiniWinSimple_Common/: main.c  main.h  miniwin_config.h  miniwin_user.c  miniwin_user.h  window_simple.c  window_simple.h
MiniWinTTFonts_Common/: main.c  miniwin_config.h  miniwin_user.c  miniwin_user.h  window_tt_font.c  window_tt_font.h  window_tt_font_text_box.c  window_tt_font_text_box.h  window_tt_font_text_box_arrows.c  window_tt_font_text_box_arrows.h  window_tt_font_text_box_scroll_bar.c  window_tt_font_text_box_scroll_bar.h
MiniWinTest_Common/: kitten.c  miniwin_config.h  miniwin_user.c  miniwin_user.h  window_drag.c  window_drag.h  window_gl.c  window_gl.h  window_paint_rect.c  window_paint_rect.h  window_scroll.c  window_scroll.h  window_tabs.c  window_tabs.h  window_test.c  window_test.h  window_tree.c  window_tree.h  window_yield.c  window_yield.h
TrueStudio/: .gitignore
e2studio/: .gitignore
(+3090 files in other folders)
