idf_component_register(SRCS "../../../../../MiniWinFixedWindows_Common/minwin_user.c"
							"../../../../../MiniWinFixedWindows_Common/date_bitmap.c"
							"../../../../../MiniWinFixedWindows_Common/date_down_bitmap.c"
							"../../../../../MiniWinFixedWindows_Common/file_bitmap.c"
							"../../../../../MiniWinFixedWindows_Common/file_down_bitmap.c"
							"../../../../../MiniWinFixedWindows_Common/help_bitmap.c"
							"../../../../../MiniWinFixedWindows_Common/help_down_bitmap.c"
							"../../../../../MiniWinFixedWindows_Common/settings_bitmap.c"
							"../../../../../MiniWinFixedWindows_Common/settings_down_bitmap.c"
							"../../../../../MiniWinFixedWindows_Common/temp_bitmap.c"
							"../../../../../MiniWinFixedWindows_Common/temp_down_bitmap.c"
							"../../../../../MiniWinFixedWindows_Common/time_bitmap.c"
							"../../../../../MiniWinFixedWindows_Common/time_down_bitmap.c"
							"../../../../../MiniWinFixedWindows_Common/window_date_icon.c"
							"../../../../../MiniWinFixedWindows_Common/window_file_icon.c"
							"../../../../../MiniWinFixedWindows_Common/window_help_icon.c"
							"../../../../../MiniWinFixedWindows_Common/window_settings_icon.c"
							"../../../../../MiniWinFixedWindows_Common/window_temp_icon.c"
							"../../../../../MiniWinFixedWindows_Common/window_time_icon.c"							
							"../../../../../MiniWinFixedWindows_Common/window_file.c"
							"../../../../../MiniWinFixedWindows_Common/window_settings.c"
							"../../../../../MiniWinFixedWindows_Common/window_temp.c"
					REQUIRES "MiniWin"
					         "MiniWinFixedWindows"
                    INCLUDE_DIRS "../../../../../MiniWin"
                    			 "../../../../../MiniWinFixedWindows_Common"
                    			 "../../main"
                    			 "../../../../../MiniWin/gl/fonts/truetype/mcufont")