idf_component_register(SRCS "../../../../../MiniWinTTFonts_Common/miniwin_user.c"
							"../../../../../MiniWinTTFonts_Common/window_tt_font.c"
							"../../../../../MiniWinTTFonts_Common/window_tt_font_text_box.c"
							"../../../../../MiniWinTTFonts_Common/window_tt_font_text_box_arrows.c"
							"../../../../../MiniWinTTFonts_Common/window_tt_font_text_box_scroll_bar.c"
					REQUIRES "MiniWin"
					         "MiniWinTTFonts"
                    INCLUDE_DIRS "../../../../../MiniWin"
                    			 "../../../../../MiniWinTTFonts_Common"
                    			 "../../main"
                    			 "../../../../../MiniWin/gl/fonts/truetype/mcufont")