idf_component_register(SRCS "../../../../../MiniWinTest_Common/miniwin_user.c"
							"../../../../../MiniWinTest_Common/kitten.c"
							"../../../../../MiniWinTest_Common/window_drag.c"
							"../../../../../MiniWinTest_Common/window_gl.c"
							"../../../../../MiniWinTest_Common/window_paint_rect.c"
							"../../../../../MiniWinTest_Common/window_scroll.c"
							"../../../../../MiniWinTest_Common/window_tabs.c"
							"../../../../../MiniWinTest_Common/window_test.c"
							"../../../../../MiniWinTest_Common/window_tree.c"
							"../../../../../MiniWinTest_Common/window_yield.c"						
					REQUIRES "MiniWin"
					         "MiniWinTest"
                    INCLUDE_DIRS "../../../../../MiniWin"
                    			 "../../../../../MiniWinTest_Common"
                    			 "../../main"
                    			 "../../../../../MiniWin/gl/fonts/truetype/mcufont")